#72: Cleanup code